--- a/Quizz-app/index.html
+++ b/Quizz-app/index.html
@@ -10,7 +10,7 @@
     <div class="app">
         <!-- <h1>Simple Quiz</h1> -->
         <div class="heading" >
-            <h1>Simple Quiz</h1>
+            <h1>Simple-Quiz</h1>
             <p class="countDown">10</p>
         </div>
         <div class="quiz">
